[package]
name = "utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
repl = ["clap", "shlex"]
telegram = ["ureq", "native-tls", "urlencoding"]
tracing = ["dep:tracing", "tracing-subscriber"]
tracy = ["tracing", "tracing-tracy"]

[dependencies]

# repl
[dependencies.clap]
version = "4.1.1"
features = ["derive"]
optional = true

[dependencies.shlex]
version = "1.1.0"
optional = true

# tracing
[dependencies.tracing]
version = "0.1.37"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.16"
optional = true

[dependencies.tracing-tracy]
version = "*"
optional = true
default-features = false
features = ["enable", "system-tracing", "context-switch-tracing", "sampling", "code-transfer", "only-localhost", "timer-fallback"]

# telegram
[dependencies.ureq]
version = "2.6.2"
default-features = false
features = ["native-tls", "gzip"]
optional = true

[dependencies.native-tls]
version = "0.2.11"
optional = true

[dependencies.urlencoding]
version = "2.1.2"
optional = true
