[package]
name = "utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
repl = ["clap", "shlex"]
telegram = ["reqwest", "urlencoding"]
tracing = ["dep:tracing", "tracing-subscriber"]
tracy = ["tracing", "tracing-tracy"]
tts = ["windows"]

[dependencies]

# repl
[dependencies.clap]
version = "4.1.1"
features = ["derive"]
optional = true

[dependencies.shlex]
version = "1.1.0"
optional = true

# tracing
[dependencies.tracing]
version = "0.1.37"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.16"
optional = true

[dependencies.tracing-tracy]
version = "*"
default-features = false
features = ["enable", "system-tracing", "context-switch-tracing", "sampling", "code-transfer", "only-localhost", "timer-fallback"]
optional = true

# telegram
[dependencies.reqwest]
version = "0.11.16"
features = ["blocking", "gzip"]
optional = true

[dependencies.urlencoding]
version = "2.1.2"
optional = true

# tts
[dependencies.windows]
version = "0.48.0"
features = ["Media_SpeechSynthesis", "Storage_Streams", "Foundation", "Foundation_Collections"]
optional = true
