[package]
name = "utility"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
repl = ["clap", "shlex"]
telegram = ["reqwest", "urlencoding"]
tracing = ["dep:tracing", "tracing-subscriber"]
tracy = ["tracing", "tracing-tracy"]
tts = ["windows"]
measure = []

[dependencies]

# repl
[dependencies.clap]
version = "4.5.1"
features = ["derive"]
optional = true

[dependencies.shlex]
version = "1.3.0"
optional = true

# tracing
[dependencies.tracing]
version = "0.1.40"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.18"
optional = true

[dependencies.tracing-tracy]
version = "0.11.0"
default-features = false
features = ["enable", "system-tracing", "context-switch-tracing", "sampling", "code-transfer", "only-localhost", "timer-fallback"]
optional = true

# telegram
[dependencies.reqwest]
version = "0.11.24"
features = ["blocking", "gzip"]
optional = true

[dependencies.urlencoding]
version = "2.1.3"
optional = true

# tts
[dependencies.windows]
version = "0.54.0"
features = ["Media_SpeechSynthesis", "Storage_Streams", "Foundation", "Foundation_Collections"]
optional = true
